Fix horizontal scroll on home page mobile.

--- a/static/css/apps/home.less
+++ b/static/css/apps/home.less
@@ -168,21 +168,26 @@
     .home-section3 {
 
         #home-shape5 {
+            top: 0;
             width: 140%;
             left: -40px;
         }
 
         .home-social_container {
-            margin-top: 80px;
+            margin-top: 50px;
             height: 80px;
             width: 100%;
+            overflow: hidden;
+            height: 110px;
         }
 
         .home-social {
             position: relative;
             width: 200px;
+            height: 20px;
             padding: 0 20px 0 50px;
             margin: auto;
+            margin-top: 30px;
         }
 
     }
